--- a/Lockers/css/caruso.css
+++ b/Lockers/css/caruso.css
@@ -14,9 +14,81 @@ header h1{
 }
 
 main {
-    padding: 5px 10px;
-    font-size: 1.2em;
+  padding: 5px 10px;
+  font-size: 1.2em;
 }
+
+.signUp_user{
+  margin: 30px;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container_signUp_user {
+  border: 3px solid #283747;
+  border-radius: 10px;
+  width: 35%;
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.signUp_user h2{
+  color: #283747;
+}
+
+.signUp_user form{
+  width: 70%;
+}
+
+.signUp_user input{
+  height: 40px;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px 20px;
+  margin: 5px 0;
+  border: 1px solid #283747;
+}
+
+.signUp_user input[type="submit"] {
+  width: 100%;
+  height: 40px;
+  color: #E5E7E9;
+  background: #283747;
+  border: 1px solid #E5E7E9;
+  border-radius: 5px;
+  padding: 10px 25px;
+  margin: 5px 0 25px 0;
+}
+
+.signUp_user input[type="submit"]:hover{
+  color: #E5E7E9;
+  background: crimson;
+  border: 1px solid #283747;
+}
+
+.signUp_user button {
+  width: 50%;
+  height: 40px;
+  color: #E5E7E9;
+  background: #283747;
+  border: 1px solid #E5E7E9;
+  border-radius: 5px;
+  padding: 10px 25px;
+  margin: 5px 0 25px 0;
+}
+
+.signUp_user button:hover{
+  color: #E5E7E9;
+  background: crimson;
+  border: 1px solid #283747;
+}
+
 .btn-default {
   background-color: #AAA;
   font-style: italic;
